# allodepute

./: .env  .gitignore  Pipfile  TODO  ansible.cfg  babel.config.js  dodo.py  package-lock.json  package.json  rollup.config.js  scripts.py  setup.cfg
data/: README.md  complements_telephones.csv  complements_twitter.csv  deputes.csv  laposte_hexasmal.csv
inventory/: hosts
inventory/group_vars/: allodepute.yml
playbooks/: app.yml  app_tasks.yml  deploy.yml  matomo.yml  requirements.yml
playbooks/inventory/: hosts
playbooks/inventory/group_vars/: allodepute.yml  matomo.yml
playbooks/inventory/group_vars/all/: secrets.yml  vars.yml
playbooks/inventory/host_vars/: allodepute1.yml  matomo1.yml
playbooks/roles/common/defaults/: main.yml
playbooks/roles/common/handlers/: main.yml
playbooks/templates/: nginx_site.conf.j2
src/: manage.py
src/allodepute/: asgi.py  settings.py  urls.py  wsgi.py
src/appels/: loaders.py  urls.py  views.py
src/appels/templates/: email.txt
src/components/: Appel.svelte  BoiteRecherche.svelte  DeputeActif.svelte  PhotoDepute.svelte  RechercheDepute.svelte  back.js  main.js  tracking.js  utils.js
src/deputes/: admin.py  apps.py  departements.csv  departements.py  models.py  urls.py  views.py
src/deputes/migrations/: 0001_initial.py  0002_auto_20200201_1708.py  0003_depute.py  0004_auto_20200202_0147.py  0005_auto_20200216_2243.py
src/front/: BoiteRecherche.svelte  BoiteRecherche.test.js  Email.svelte  Tweets.svelte  back.js  stores.js  tracking.js
src/front/__tests__/: BoiteRecherche.test.js
(+69 files in other folders)
