[metadata]
name = allodepute
version = 0.1
description = Un logiciel pour appeler les députés
long_description = file: README.rst
url = https://github.com/aktiur/allodepute
author = Arthur Cheysson
author_email = arthur@cheysson.fr
license = GPLv3+
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)

[options]
package_dir =
    =src
include_package_data = true
packages = find:

[options.packages.find]
where=src
